// ======================= SmartRentRanker — DB Schema (dbdiagram.io) =======================
// Core goals:
// - Хранить квартиры (из Циана), фото и эмбеддинги
// - Пользователи, профили (alias), веса факторов и POI
// - Оценки (single-label) и парные сравнения (pairwise)
// - Расчёт и кэш travel-time, очередь выдачи, просмотренные/сохранённые
// - Паблишинг и форки профилей, снапшоты модели

// ---------------------------- Users & Auth ----------------------------

Table users {
  id               bigserial [primary key]
  tg_user_id       bigint        // Telegram user id (если используется)
  username         text
  created_at       timestamptz [not null, default: `now()`]
  updated_at       timestamptz [not null, default: `now()`]

  indexes { (tg_user_id) [unique] }
}

// ---------------------------- Profiles (alias) ----------------------------

Table profiles {
  id                   bigserial [primary key]
  user_id              bigint [not null, ref: > users.id]
  alias                text   [not null]         // имя профиля: work_45min
  city                 text   [not null]         // город (для фильтров Циана)
  cian_filter          jsonb  [not null]         // jsonQuery для публичного API Циана
  weight_beauty        numeric(5,3) [not null, default: 0.50]
  weight_price_quality numeric(5,3) [not null, default: 0.30]
  weight_distance      numeric(5,3) [not null, default: 0.20]
  epsilon_explore      numeric(5,3) [not null, default: 0.20]   // ε-greedy
  stage                text   [not null, default: 'single']      // 'single' | 'pairwise'
  is_public            boolean [not null, default: false]
  public_slug          text                                    // для шаринга (читаемый id)
  forked_from_profile_id bigint [ref: > profiles.id]           // чей профиль был форкнут
  last_trained_snapshot_id bigint [ref: > model_snapshots.id]
  created_at           timestamptz [not null, default: `now()`]
  updated_at           timestamptz [not null, default: `now()`]

  indexes {
    (user_id, alias) [unique]
    (public_slug) [unique]
  }
}

// ---------------------------- Points of Interest (POI) ----------------------------

Table pois {
  id            bigserial [primary key]
  user_id       bigint [not null, ref: > users.id]
  label         text   [not null]           // 'Work', 'Gym', ...
  lat           numeric(10,7) [not null]
  lng           numeric(10,7) [not null]
  created_at    timestamptz [not null, default: `now()`]

  indexes { (user_id, label) [unique] }
}

Table profile_pois {
  profile_id    bigint [not null, ref: > profiles.id]
  poi_id        bigint [not null, ref: > pois.id]
  max_travel_min integer [not null, default: 45]
  mode          text [not null, default: 'masstransit']   // режим расчёта
  priority      integer [not null, default: 1]            // если несколько POI у профиля

  indexes { (profile_id, poi_id) [pk] }
}

// ---------------------------- Flats (offers from CIAN) ----------------------------

Table flats {
  id                bigserial [primary key]     // внутренний id
  cian_id           bigint   [not null]         // id объявл. на Циан
  url               text     [not null]
  city              text     [not null]
  address           text
  lat               numeric(10,7)
  lng               numeric(10,7)
  price_rub         integer
  rooms             integer
  area_sqm          numeric(7,2)
  floor             integer
  floors_total      integer
  building_year     integer
  material          text
  nearest_metro     text
  metro_distance_m  integer
  published_at      timestamptz                 // время публикации на Циан
  fetched_at        timestamptz [not null, default: `now()`]
  active            boolean [not null, default: true]
  deactivated_at    timestamptz

  indexes {
    (cian_id) [unique]
    (city, published_at)
    (active)
  }
}

Table flat_photos {
  id           bigserial [primary key]
  flat_id      bigint [not null, ref: > flats.id]
  seq          integer [not null]                // порядковый номер в объявлении
  url          text    [not null]
  room_type    text                               // 'kitchen','bathroom','living', 'plan', ...
  created_at   timestamptz [not null, default: `now()`]

  indexes { (flat_id, seq) [unique] }
}

// Вектор хранится вне БД (S3/minio). Здесь — ссылка и мета.
Table photo_embeddings {
  id           bigserial [primary key]
  photo_id     bigint [not null, ref: > flat_photos.id]
  storage_uri  text   [not null]                 // где лежит вектор (например, .npy/.pt)
  model        text   [not null, default: 'CLIP-ViT-B/32']
  dim          integer [not null, default: 512]
  created_at   timestamptz [not null, default: `now()`]

  indexes { (photo_id) [unique] }
}

// ---------------------------- Travel-time cache ----------------------------

Table flat_poi_travel {
  flat_id      bigint [not null, ref: > flats.id]
  poi_id       bigint [not null, ref: > pois.id]
  mode         text   [not null, default: 'masstransit']
  travel_min   integer
  updated_at   timestamptz [not null, default: `now()`]
  expires_at   timestamptz

  indexes { (flat_id, poi_id, mode) [pk] }
}

// ---------------------------- Ratings (single-label) ----------------------------

Table ratings {
  id                 bigserial [primary key]
  user_id            bigint [not null, ref: > users.id]
  profile_id         bigint [not null, ref: > profiles.id]
  flat_id            bigint [not null, ref: > flats.id]
  beauty             integer        // 1..5, nullable
  price_quality      integer        // 1..5, nullable
  distance_pref      integer        // 1..5, nullable
  skipped            boolean [not null, default: false]
  source             text    [not null, default: 'telegram']   // где поставлена оценка
  created_at         timestamptz [not null, default: `now()`]

  indexes {
    (user_id, profile_id, flat_id) [unique]   // одна запись на квартиру в рамках профиля
    (profile_id, created_at)
  }
}

// ---------------------------- Pairwise comparisons ----------------------------

Table pairwise_ratings {
  id                 bigserial [primary key]
  user_id            bigint [not null, ref: > users.id]
  profile_id         bigint [not null, ref: > profiles.id]
  flat_a_id          bigint [not null, ref: > flats.id]
  flat_b_id          bigint [not null, ref: > flats.id]
  factor             text   [not null]     // 'beauty' | 'price_quality' | 'distance'
  preferred_flat_id  bigint [not null, ref: > flats.id]  // должно быть = flat_a_id или flat_b_id
  created_at         timestamptz [not null, default: `now()`]

  indexes {
    (profile_id, created_at)
    (user_id, profile_id, flat_a_id, flat_b_id, factor) [unique]
  }
}

// ---------------------------- Queue & Seen/Saved ----------------------------

Table profile_delivery_queue {
  id            bigserial [primary key]
  profile_id    bigint [not null, ref: > profiles.id]
  flat_id       bigint [not null, ref: > flats.id]
  state         text   [not null, default: 'queued'] // 'queued' | 'shown' | 'rated' | 'skipped'
  enqueued_at   timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  indexes { (profile_id, flat_id) [unique] }
}

Table seen_flats {
  user_id       bigint [not null, ref: > users.id]
  profile_id    bigint [not null, ref: > profiles.id]
  flat_id       bigint [not null, ref: > flats.id]
  first_seen_at timestamptz [not null, default: `now()`]

  indexes { (user_id, profile_id, flat_id) [pk] }
}

Table saved_flats {
  user_id       bigint [not null, ref: > users.id]
  profile_id    bigint [not null, ref: > profiles.id]
  flat_id       bigint [not null, ref: > flats.id]
  saved_at      timestamptz [not null, default: `now()`]

  indexes { (user_id, profile_id, flat_id) [pk] }
}

Table hidden_flats {
  user_id       bigint [not null, ref: > users.id]
  profile_id    bigint [not null, ref: > profiles.id]
  flat_id       bigint [not null, ref: > flats.id]
  hidden_at     timestamptz [not null, default: `now()`]

  indexes { (user_id, profile_id, flat_id) [pk] }
}

// ---------------------------- Model snapshots & metrics ----------------------------

Table model_snapshots {
  id                 bigserial [primary key]
  profile_id         bigint [not null, ref: > profiles.id]
  backbone           text   [not null, default: 'CLIP-ViT-B/32']
  head_type          text   [not null, default: 'MLP']
  storage_uri        text   [not null]           // s3://models/<...>.pt
  metrics            jsonb
  kendall_tau_top20  numeric(5,3)                // удобная вытяжка метрики
  mae                numeric(6,4)
  created_at         timestamptz [not null, default: `now()`]

  indexes { (profile_id, created_at) }
}

Table profile_metrics {
  profile_id       bigint [primary key, ref: > profiles.id]
  ratings_count    integer [not null, default: 0]
  pairwise_count   integer [not null, default: 0]
  stability_tau    numeric(5,3)   // текущая оценка стабильности
  last_trained_at  timestamptz
}

// ---------------------------- Score cache (materialized) ----------------------------
// Опционально: кэшировать рассчитанный score на моменте инференса для быстрого /top

Table profile_flat_score {
  profile_id    bigint [not null, ref: > profiles.id]
  flat_id       bigint [not null, ref: > flats.id]
  score         numeric(8,5) [not null]
  beauty_hat    numeric(6,4)
  price_quality_hat numeric(6,4)
  distance_hat  numeric(6,4)
  updated_at    timestamptz [not null, default: `now()`]

  indexes { (profile_id, flat_id) [pk] }
}

